change default roles to ajaja and kartturi

--- a/src/main/resources/templates/fragments/enterprise.html
+++ b/src/main/resources/templates/fragments/enterprise.html
@@ -231,8 +231,8 @@
     function addDefaultUsersWithLimitedRoles() {
         const defaultUsers = ["Jarkko", "Sampsa", "Markus", "Ahma", "Tuomo", "Suvi"];
         const defaultRoles = [
-            { name: "Typist", color: "#6f42c1" },
-            { name: "Driver", color: "#dc3545" },
+            { name: "Ajaja", color: "#6f42c1", desc : "Jakaa ruudun ja kädet näppisellä tekee mitä Kartturi sanoo." },
+            { name: "Kartturi", color: "#dc3545", desc : "Neuvottelee Takapenkin kanssa ja kertoo Ajajalle mitä tehdään" },
           //  { name: "Facilitator", color: "#28a745" }
         ];
 
